fix menu toggle on mobile

--- a/src/styles/modules/nav.css
+++ b/src/styles/modules/nav.css
@@ -54,20 +54,17 @@
 .icon-bar--vertical {
 	flex-direction: column;
 	min-width: 64px;
-	height: 100%;
 	border-right: 1px solid var(--color-0-3);
 	height: calc(100vh - var(--top-nav-height));
 }
 
 .icon {
-	width:  5vw;
 	height: 5vw;
 	stroke: var(--color-0-0);
 	fill:   var(--color-0-0);
 }
 
 .menu-icon {
-	width:  2vw;
 	height: 2vw;
 	margin: var(--sm) 0;
 	stroke: var(--color-0-0);
